# Multi-Region-RNN

./: model.pt  model_PerceptualDecisionMaking-v0_DelayMatchSample-v0_IntervalDiscrimination-v0_ReadySetGo-v0.pt  network_interaction.csv  notebook.ipynb  pyproject.toml  script.py  shapley_modes.csv
multi_rnn/: eval.py  model.py  msa.py  tasks.py  train.py
